--- a/src/views/pages/index_partial_events.ejs
+++ b/src/views/pages/index_partial_events.ejs
@@ -1,6 +1,6 @@
 <!-- row - TODAY -->
 <% if (events.today.length > 0) { %>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-12">
             <div class="section-title">
                 <h2 class="title">HOJE</h2>
@@ -36,7 +36,7 @@
 
 <!-- row - TOMORROW -->
 <% if (events.tomorrow.length > 0) { %>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-12">
             <div class="section-title">
                 <h2 class="title">AMANHÃ</h2>
@@ -72,7 +72,7 @@
 
 <!-- row - NEXT 7 DAYS -->
 <% if (events.sevenDays.length > 0) { %>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-12">
             <div class="section-title">
                 <h2 class="title">próximos 7 dias</h2>
@@ -108,7 +108,7 @@
 
 <!-- row - NEXT 15 DAYS -->
 <% if (events.fifteenDays.length > 0) { %>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-12">
             <div class="section-title">
                 <h2 class="title">próximos 15 dias</h2>
@@ -144,7 +144,7 @@
 
 <!-- row - NEXT 30 DAYS -->
 <% if (events.thirtyDays.length > 0) { %>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-md-12">
             <div class="section-title">
                 <h2 class="title">próximos 30 dias</h2>
