--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -20,12 +20,12 @@
             </div>
         </div> -->
 
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="footer-widget">
                 <div class="footer-logo">
-                    <a href="index.html" class="logo"><img src="./img/sulbaguia-logo-h-t.png" alt=""></a>
+                    <a href="/" class="logo"><img src="./img/sulbaguia-logo-h-t.png" alt=""></a>
                 </div>
-                <p>O portal <b>Sul BA Guia</b> tem como missão entegar de forma imparcial o melhor e mais atualizado conteúdo sobre eventos, programas e serviços do sul da Bahia.</p>
+                <p>Temos como missão entregar de forma imparcial o conteúdo mais atualizado e completo sobre eventos, programas e serviços do sul e extremo sul da Bahia.</p>
                 <p>contato@sulbaguia.com.br</p>
                 <ul class="contact-social">
                     <li><a href="#" class="social-facebook"><i class="fab fa-facebook"></i></a></li>
@@ -36,14 +36,14 @@
             </div>
         </div>
 
-        <div class="col-md-4">
-            <div class="footer-widget">
+        <div class="col-md-1">
+            <!-- <div class="footer-widget">
                 <h3 class="footer-title">Fale conosco</h3>
                 <div class="newsletter-widget">
                     <form>
                         <p>Dúvida, sugestão ou parceira? </p>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 pr-0">
                                 <input class="input" name="email" placeholder="Email">
                             </div>
                             <div class="col-md-6">
@@ -54,17 +54,42 @@
                         <button class="primary-button">Enviar</button>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
         
-        <div class="col-md-4">
+        <div class="col-md-5">
             <div class="footer-widget">
                 <h3 class="footer-title">Lista de emails</h3>
                 <div class="newsletter-widget">
                     <form>
-                        <p>Receba em primeira mão dicas, ofertas e anúncios da região.</p>
-                        <input class="input" name="newsletter" placeholder="Digite seu email">
-                        <button class="primary-button">Inscrever</button>
+                        <p>Receba em primeira mão dicas, ofertas e anúncios.</p>
+                        <div class="row">
+                            <div class="col-md-8 pr-0">
+                                <input class="input" name="newsletter" placeholder="Digite seu email">
+                            </div>
+                            <div class="col-md-4">
+                                <button class="primary-button">Inscrever</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="mt-4"></div>
+
+                <h3 class="footer-title">Fale conosco</h3>
+                <div class="newsletter-widget">
+                    <form>
+                        <p>Dúvida, sugestão ou parceira? </p>
+                        <div class="row">
+                            <div class="col-md-6 pr-0">
+                                <input class="input" name="email" placeholder="Email">
+                            </div>
+                            <div class="col-md-6">
+                                <input class="input" name="phone" placeholder="Telefone">
+                            </div>
+                        </div>
+                        <input class="input" name="message" placeholder="Mensagem">
+                        <button class="primary-button d-block mx-auto">Enviar</button>
                     </form>
                 </div>
             </div>
@@ -100,9 +125,9 @@
         <div class="col-md-6 col-md-push-6">
             <ul class="footer-nav">
                 <li><a href="/">Início</a></li>
-                <li><a href="#">Eventos</a></li>
-                <li><a href="#">Promoções</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#" onclick="return false;">Serviços</a></li>
+                <li><a href="#" onclick="return false;">Promoções</a></li>
+                <li><a href="#" onclick="return false;">Blog</a></li>
             </ul>
         </div>
         <div class="col-md-6 col-md-pull-6">
