--- a/src/views/pages/index_partial_side.ejs
+++ b/src/views/pages/index_partial_side.ejs
@@ -15,9 +15,8 @@
                             <!-- <li><a href="#"><i class="far fa-check-square"></i>Santo André / Santo Antônio<span>451</span></a></li> -->
                         </ul>
                     </div>
-                    <div class="mt-2">
-                        <button class="primary-button">Inscrever</button>
-                    </div>
+                    
+                    <button class="primary-button d-block mx-auto mt-3">Filtrar</button>
                 </div>
                 <!-- /cities widget -->
                     
