--- a/angular-admin/src/app/cities/add-city/add-city.component.html
+++ b/angular-admin/src/app/cities/add-city/add-city.component.html
@@ -1,4 +1,7 @@
-<form class="form-container" [formGroup]="fg"> 
+<form class="form-container" [formGroup]="fg">
+
+  <h2>Cadastrar Cidade</h2>
+
   <!-- CODE -->
   <mat-form-field>
     <input #firstInput matInput formControlName="code" placeholder="Código" required>
