--- a/angular-admin/src/app/cities/edit-city/edit-city.component.html
+++ b/angular-admin/src/app/cities/edit-city/edit-city.component.html
@@ -1,4 +1,6 @@
 <form class="form-container" [formGroup]="fg"> 
+  <h2>Editar Cidade</h2>
+
   <!-- CODE -->
   <mat-form-field>
     <input matInput formControlName="code" placeholder="Código" required>
