--- a/angular-admin/src/app/orgs/add-org/add-org.component.html
+++ b/angular-admin/src/app/orgs/add-org/add-org.component.html
@@ -1,5 +1,7 @@
 <form class="form-container" [formGroup]="fg"> 
-  <h3>Organização</h3>
+  
+  <h2>Cadastrar Organização</h2>
+  
   <!-- CODE -->
   <mat-form-field>
     <input #firstInput matInput formControlName="code" placeholder="Código" required>
