--- a/angular-admin/src/app/orgs/edit-org/edit-org.component.html
+++ b/angular-admin/src/app/orgs/edit-org/edit-org.component.html
@@ -1,5 +1,7 @@
-<form class="form-container" [formGroup]="fg"> 
-    <h3>Organização</h3>
+<form class="form-container" [formGroup]="fg">
+
+    <h2>Editar Organização</h2>
+
     <!-- CODE -->
     <mat-form-field>
       <input matInput formControlName="code" placeholder="Código" required>
