--- a/node-app/src/views/pages/index_partial_featured.ejs
+++ b/node-app/src/views/pages/index_partial_featured.ejs
@@ -1,180 +1,9 @@
-<!-- SECTION - DESTAQUE -->
-<div class="section" >
-    <div class="container">
-        <div id="hot-post" class="row hot-post">
-
-            <div class="col-md-8 hot-post-left">
-                <div class="post post-thumb">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[0].img %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category featured">
-                            <a href="#" onclick="return false;"><%= events.featured[0].org_name %></a>
-                        </div>
-                        <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[0].title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= events.featured[0].org_city %></a></li>
-                            <li><%= moment(events.featured[0].start).format("ddd") %></li>
-                            <li><%= moment(events.featured[0].start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
+<div class="section">
+    <div class="row justify-content-center">
+        <% for(var i=0; i < events.featured.length; i++) { %>
+            <div class=".col-12 .col-sm-12 .col-md-6 .col-lg-4 .col-xl-3 mx-3">
+                <%- include('../partials/event', {index: i}) %>
             </div>
-
-            <div class="col-md-4 hot-post-right">
-                <div class="post post-thumb">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[1].img %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category featured">
-                            <a href="#" onclick="return false;"><%= events.featured[1].org_name %></a>
-                        </div>
-                        <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[1].title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= events.featured[1].org_city %></a></li>
-                            <li><%= moment(events.featured[1].start).format("ddd") %></li>
-                            <li><%= moment(events.featured[1].start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="post post-thumb">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[2].img %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category featured">
-                            <a href="#" onclick="return false;"><%= events.featured[2].org_name %></a>
-                        </div>
-                        <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[2].title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= events.featured[2].org_city %></a></li>
-                            <li><%= moment(events.featured[2].start).format("ddd") %></li>
-                            <li><%= moment(events.featured[2].start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SECOND AND THIRD ROWS -->
-            <% if (events.featured.length >= 6) { %>
-
-                <!-- FIRST COLUMN -->
-                <div class="col-md-4 hot-post-right">
-
-                    <div class="post post-thumb">
-                        <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[3].img %>" alt=""></a>
-                        <div class="post-body">
-                            <div class="post-category featured">
-                                <a href="#" onclick="return false;"><%= events.featured[3].org_name %></a>
-                            </div>
-                            <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[3].title %></a></h3>
-                            <ul class="post-meta">
-                                <li><a href="#" onclick="return false;"><%= events.featured[3].org_city %></a></li>
-                                <li><%= moment(events.featured[3].start).format("ddd") %></li>
-                                <li><%= moment(events.featured[3].start).format("DD/MM") %></li>
-                            </ul>
-                        </div>
-                    </div>
-
-
-                    <% if (events.featured.length >= 7) { %>
-                        <div class="post post-thumb">
-                            <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[6].img %>" alt=""></a>
-                            <div class="post-body">
-                                <div class="post-category featured">
-                                    <a href="#" onclick="return false;"><%= events.featured[6].org_name %></a>
-                                </div>
-                                <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[6].title %></a></h3>
-                                <ul class="post-meta">
-                                    <li><a href="#" onclick="return false;"><%= events.featured[6].org_city %></a></li>
-                                    <li><%= moment(events.featured[6].start).format("ddd") %></li>
-                                    <li><%= moment(events.featured[6].start).format("DD/MM") %></li>
-                                </ul>
-                            </div>
-                        </div>
-                    <% } %>
-                </div>
-
-
-                <!-- SECOND COLUMN -->
-                <div class="col-md-4 hot-post-right">
-
-                    <div class="post post-thumb">
-                        <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[4].img %>" alt=""></a>
-                        <div class="post-body">
-                            <div class="post-category featured">
-                                <a href="#" onclick="return false;"><%= events.featured[4].org_name %></a>
-                            </div>
-                            <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[4].title %></a></h3>
-                            <ul class="post-meta">
-                                <li><a href="#" onclick="return false;"><%= events.featured[4].org_city %></a></li>
-                                <li><%= moment(events.featured[4].start).format("ddd") %></li>
-                                <li><%= moment(events.featured[4].start).format("DD/MM") %></li>
-                            </ul>
-                        </div>
-                    </div>
-
-
-                    <% if (events.featured.length >= 8) { %>
-                        <div class="post post-thumb">
-                            <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[7].img %>" alt=""></a>
-                            <div class="post-body">
-                                <div class="post-category featured">
-                                    <a href="#" onclick="return false;">Fashion</a>
-                                    <a href="#" onclick="return false;"><%= events.featured[7].org_name %></a>
-                                </div>
-                                <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[7].title %></a></h3>
-                                <ul class="post-meta">
-                                    <li><a href="#" onclick="return false;"><%= events.featured[7].org_city %></a></li>
-                                    <li><%= moment(events.featured[7].start).format("ddd") %></li>
-                                    <li><%= moment(events.featured[7].start).format("DD/MM") %></li>
-                                </ul>
-                            </div>
-                        </div>
-                    <% } %>
-                </div>
-
-
-                <!-- THIRD COLUMN -->
-                <div class="col-md-4 hot-post-right">
-
-                    <div class="post post-thumb">
-                        <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[5].img %>" alt=""></a>
-                        <div class="post-body">
-                            <div class="post-category featured">
-                                <a href="#" onclick="return false;"><%= events.featured[5].org_name %></a>
-                            </div>
-                            <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[5].title %></a></h3>
-                            <ul class="post-meta">
-                                <li><a href="#" onclick="return false;"><%= events.featured[5].org_city %></a></li>
-                                <li><%= moment(events.featured[5].start).format("ddd") %></li>
-                                <li><%= moment(events.featured[5].start).format("DD/MM") %></li>
-                            </ul>
-                        </div>
-                    </div>
-
-
-                    <% if (events.featured.length >= 9) { %>
-                        <div class="post post-thumb">
-                            <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= events.featured[8].img %>" alt=""></a>
-                            <div class="post-body">
-                                <div class="post-category featured">
-                                    <a href="#" onclick="return false;">Fashion</a>
-                                    <a href="#" onclick="return false;"><%= events.featured[8].org_name %></a>
-                                </div>
-                                <h3 class="post-title title-lg"><a href="#" onclick="return false;"><%= events.featured[8].title %></a></h3>
-                                <ul class="post-meta">
-                                    <li><a href="#" onclick="return false;"><%= events.featured[8].org_city %></a></li>
-                                    <li><%= moment(events.featured[8].start).format("ddd") %></li>
-                                    <li><%= moment(events.featured[8].start).format("DD/MM") %></li>
-                                </ul>
-                            </div>
-                        </div>
-                    <% } %>
-
-                </div>
-            <% } %>    
-
-        </div>
-        <!-- /row -->
+        <% } %>
     </div>
-    <!-- /container -->
 </div>
-<!-- /SECTION -->
