--- a/angular-admin/src/app/cities/add-city/add-city.component.scss
+++ b/angular-admin/src/app/cities/add-city/add-city.component.scss
@@ -1,3 +1,8 @@
+h2 {
+    color: rgba(0,0,0,0.5);
+    margin-bottom: 16px;
+}
+
 .form-container {
     display: flex;
     flex-direction: column;
