--- a/angular-admin/src/app/events/edit-event/edit-event.component.scss
+++ b/angular-admin/src/app/events/edit-event/edit-event.component.scss
@@ -1,3 +1,8 @@
+h2 {
+    color: rgba(0,0,0,0.5);
+    margin-bottom: 16px;
+}
+
 .form-container {
     display: flex;
     flex-direction: column;
@@ -40,4 +45,37 @@ button {
             width: 100%; 
         }
     }
+}
+
+div.row.images {
+    margin-top: 16px;
+
+    input {
+        display: none;
+    }
+    .image-col {
+        text-align: center;
+        margin-bottom: 16px;
+        button {
+            margin-top: 4px;
+        }
+    }
+    div.img-wrapper {
+        height: 140px;
+        width: 140px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        outline: 1px solid rgba(0,0,0,0.1);
+        overflow: hidden;
+
+        img {
+            max-width: 140px;
+            max-height: 150%;
+        }
+    }
+}
+
+#cancel {
+    margin-bottom: 32px;
 }
