--- a/angular-admin/src/app/orgs/add-org/add-org.component.html
+++ b/angular-admin/src/app/orgs/add-org/add-org.component.html
@@ -53,6 +53,11 @@
     <input matInput formControlName="neighborhood" placeholder="Bairro">
   </mat-form-field>
 
+  <!-- STREET -->
+  <mat-form-field>
+    <input matInput formControlName="street" placeholder="Rua">
+  </mat-form-field>
+
   <!-- NUMBER -->
   <mat-form-field>
     <input matInput formControlName="number" placeholder="Número">
