--- a/angular-admin/src/app/orgs/edit-org/edit-org.component.html
+++ b/angular-admin/src/app/orgs/edit-org/edit-org.component.html
@@ -52,6 +52,11 @@
     <mat-form-field>
       <input matInput formControlName="neighborhood" placeholder="Bairro">
     </mat-form-field>
+
+    <!-- STREET -->
+    <mat-form-field>
+      <input matInput formControlName="street" placeholder="Rua">
+    </mat-form-field>
   
     <!-- NUMBER -->
     <mat-form-field>
