--- a/node-app/src/views/pages/index.ejs
+++ b/node-app/src/views/pages/index.ejs
@@ -19,7 +19,7 @@
 
 
 <!-- SECTION - MAIN ADVERTISE-->
-<div class="section">
+<!-- <div class="section">
     <div class="container">
         <div class="row">
             <div class="col-md-12 section-row text-center">
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- /SECTION -->
 
 
