--- a/angular-admin/src/app/angular-material-components/dialog-confirm.html
+++ b/angular-admin/src/app/angular-material-components/dialog-confirm.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Confirmação</h1>
 <div mat-dialog-content>
   <p>Confirma a remoção do item:</p>
-  <p>{{data.name}}</p>
+  <p>{{data['name']}}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="false">Cancelar</button>
