--- a/node-app/src/views/pages/index_partial_side.ejs
+++ b/node-app/src/views/pages/index_partial_side.ejs
@@ -21,11 +21,11 @@
                 <!-- /cities widget -->
                     
                 <!-- ad widget-->
-                <div class="aside-widget text-center">
+                <!-- <div class="aside-widget text-center">
                     <a href="#" style="display: inline-block;margin: auto;">
                         <img class="img-responsive" src="./img/ad-3.jpg" alt="">
                     </a>
-                </div>
+                </div> -->
                 <!-- /ad widget -->
 
                 <!-- social widget -->
@@ -92,11 +92,11 @@
                 <!-- /galery widget -->
 
                 <!-- Ad widget -->
-                <div class="aside-widget text-center">
+                <!-- <div class="aside-widget text-center">
                     <a href="#" style="display: inline-block;margin: auto;">
                         <img class="img-responsive" src="./img/ad-1.jpg" alt="">
                     </a>
-                </div>
+                </div> -->
                 <!-- /Ad widget -->
 
                 <!-- post widget -->
