--- a/node-app/src/views/pages/index_partial_events.ejs
+++ b/node-app/src/views/pages/index_partial_events.ejs
@@ -10,7 +10,7 @@
         <% events.today.forEach(function(event, index) { %>
             <div class="col-md-6">
                 <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= event.img %>" alt=""></a>
+                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
                         <div class="post-category">
                             <a href="#" onclick="return false;"><%= event.org_name %></a>
@@ -46,7 +46,7 @@
         <% events.tomorrow.forEach(function(event, index) { %>
             <div class="col-md-6">
                 <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= event.img %>" alt=""></a>
+                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
                         <div class="post-category">
                             <a href="#" onclick="return false;"><%= event.org_name %></a>
@@ -82,7 +82,7 @@
         <% events.sevenDays.forEach(function(event, index) { %>
             <div class="col-md-6">
                 <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= event.img %>" alt=""></a>
+                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
                         <div class="post-category">
                             <a href="#" onclick="return false;"><%= event.org_name %></a>
@@ -118,17 +118,23 @@
         <% events.fifteenDays.forEach(function(event, index) { %>
             <div class="col-md-4">
                 <div class="post post-sm">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= event.img %>" alt=""></a>
+                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
-                        <div class="post-category">
-                            <a href="#" onclick="return false;"><%= event.org_name %></a>
-                        </div>
-                        <h3 class="post-title title-sm"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
+                        <div class="date">
                             <li><%= moment(event.start).format("ddd") %></li>
                             <li><%= moment(event.start).format("DD/MM") %></li>
-                        </ul>
+                        </div>postpost
+                        <div class="info">
+                            <div class="post-category">
+                                <a href="#" onclick="return false;"><%= event.org_name %></a>
+                            </div>
+                            <h3 class="post-title title-sm"><a href="#" onclick="return false;"><%= event.title %></a></h3>
+                            <ul class="post-meta">
+                                <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
+                                <!-- <li><%= moment(event.start).format("ddd") %></li>
+                                <li><%= moment(event.start).format("DD/MM") %></li> -->
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,7 +160,7 @@
         <% events.thirtyDays.forEach(function(event, index) { %>
             <div class="col-md-4">
                 <div class="post post-sm">
-                    <a class="post-img" href="#" onclick="return false;"><img src="./img/events/<%= event.img %>" alt=""></a>
+                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
                         <div class="post-category">
                             <a href="#" onclick="return false;"><%= event.org_name %></a>
