--- a/angular-admin/src/app/angular-material-components/nav/nav.component.html
+++ b/angular-admin/src/app/angular-material-components/nav/nav.component.html
@@ -19,7 +19,8 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+        >
+        <!-- *ngIf="isHandset$ | async" -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <!-- TODO: Add logo -->
