--- a/node-app/public/css/style.css
+++ b/node-app/public/css/style.css
@@ -169,6 +169,7 @@ figure>figcaption {
 
 .section {
   padding-top: 30px;
+  background-color: #f5f5f5;
 }
 
 .section-row {
@@ -290,8 +291,16 @@ textarea.input {
 	NAVIGATION
 ===========================================================*/
 
+nav {
+  height: 64px;
+}
+
+
 #nav {
-  border-bottom: 2px solid #e8eaed;
+  /* border-bottom: 2px solid #e8eaed; */
+  /* border-width: 0 0 1px;
+  border-radius: 0;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2); */
 }
 
 #nav:after {
@@ -315,12 +324,8 @@ textarea.input {
 }
 
 #nav-top {
-  text-align: center;
+  /* text-align: center; */
   height: 72px;
-}
-
-#nav-top>.container {
-  position: relative;
 }
 
 #nav-bottom {
@@ -352,12 +357,7 @@ textarea.input {
 \*----------------------------*/
 
 .nav-logo {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  max-width: 80%;
+  display: inline;
 }
 
 .nav-logo .logo {
@@ -367,10 +367,9 @@ textarea.input {
 }
 
 .nav-logo .logo>img {
-  max-height: 64px;
-  max-width: 100%;
+  max-height: 60px;
   margin-top: -4px;
-  margin-left: 8px;
+  margin-left: 12px;
 }
 
 /*----------------------------*\
