--- a/node-app/src/views/partials/header.ejs
+++ b/node-app/src/views/partials/header.ejs
@@ -1,16 +1,20 @@
+<!-- 
+<nav class="navbar fixed-top navbar-light bg-light">
+    <a class="navbar-brand" href="#">Fixed top</a>
+</nav> -->
 <!-- views/partials/header.ejs -->
 <!-- NAV -->
 <div id="nav">
     <!-- Top Nav -->
-    <div id="nav-top">
-        <div class="container">
+    <nav class="navbar fixed-top navbar-light bg-light nav-top">
+        <div class="nav-container">
             <!-- social -->
-            <ul class="nav-social">
+            <!-- <ul class="nav-social">
                 <li><a href="#" onclick="return false;"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#" onclick="return false;"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#" onclick="return false;"><i class="fab fa-google-plus-g"></i></a></li>
                 <li><a href="#" onclick="return false;"><i class="fab fa-instagram"></i></a></li>
-            </ul>
+            </ul> -->
             <!-- /social -->
 
             <!-- logo -->
@@ -21,7 +25,7 @@
 
             <!-- search & aside toggle -->
             <div class="nav-btns">
-                <button class="aside-btn"><i class="fas fa-bars"></i></button>
+                <!-- <button class="aside-btn"><i class="fas fa-bars"></i></button> -->
                 <!-- <button class="search-btn"><i class="fa fa-search"></i></button>
                 <div id="nav-search">
                     <form>
@@ -34,13 +38,12 @@
             </div>
             <!-- /search & aside toggle -->
         </div>
-    </div>
+    </nav>
     <!-- /Top Nav -->
 
     <!-- Main Nav -->
-    <div id="nav-bottom">
+    <!-- <div id="nav-bottom">
         <div class="container">
-            <!-- nav -->
             <ul class="nav-menu">
                 <li class="has-dropdown">
                     <a href="/">Início</a>
@@ -51,8 +54,8 @@
                                 <li><a href="sobre.html">Sobre nós</a></li>
                                 <li><a href="author.html">Anuncie aqui</a></li>
                                 <li><a href="contato.html">Fale conosco</a></li>
-                                <!-- <li><a href="blank.html">Regular</a></li>
-                                <li><a href="blog-post.html">Post</a></li> -->
+                                <li><a href="blank.html">Regular</a></li>
+                                <li><a href="blog-post.html">Post</a></li>
                             </ul>
                         </div>
                     </div>
@@ -61,9 +64,8 @@
                 <li><a href="#" onclick="return false;">Promoções</a></li>
                 <li><a href="#" onclick="return false;">Blog</a></li>
             </ul>
-            <!-- /nav -->
         </div>
-    </div>
+    </div> -->
     <!-- /Main Nav -->
 
     <!-- Aside Nav -->
