--- a/node-app/src/views/pages/index_partial_events.ejs
+++ b/node-app/src/views/pages/index_partial_events.ejs
@@ -8,7 +8,7 @@
         </div>
 
         <% events.today.forEach(function(event, index) { %>
-            <div class="col-md-6">
+            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
                 <div class="post">
                     <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
@@ -44,7 +44,7 @@
         </div>
 
         <% events.tomorrow.forEach(function(event, index) { %>
-            <div class="col-md-6">
+            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
                 <div class="post">
                     <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
@@ -80,7 +80,7 @@
         </div>
 
         <% events.sevenDays.forEach(function(event, index) { %>
-            <div class="col-md-6">
+            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
                 <div class="post">
                     <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                     <div class="post-body">
