--- a/node-app/src/views/partials/footer.ejs
+++ b/node-app/src/views/partials/footer.ejs
@@ -27,12 +27,12 @@
                 </div>
                 <p>Temos como missão entregar de forma imparcial o conteúdo mais atualizado e completo sobre eventos, programas e serviços do sul e extremo sul da Bahia.</p>
                 <p>contato@sulbaguia.com.br</p>
-                <ul class="contact-social">
+                <!-- <ul class="contact-social">
                     <li><a href="#" class="social-facebook"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#" class="social-twitter"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#" class="social-google-plus"><i class="fab fa-google-plus"></i></a></li>
                     <li><a href="#" class="social-instagram"><i class="fab fa-instagram"></i></a></li>
-                </ul>
+                </ul> -->
             </div>
         </div>
 
@@ -58,7 +58,7 @@
         </div>
         
         <div class="col-md-5">
-            <div class="footer-widget">
+            <!-- <div class="footer-widget">
                 <h3 class="footer-title">Lista de emails</h3>
                 <div class="newsletter-widget">
                     <form>
@@ -92,7 +92,7 @@
                         <button class="primary-button d-block mx-auto">Enviar</button>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- <div class="col-md-4">
@@ -125,9 +125,9 @@
         <div class="col-md-6 col-md-push-6">
             <ul class="footer-nav">
                 <li><a href="/">Início</a></li>
-                <li><a href="#" onclick="return false;">Serviços</a></li>
+                <!-- <li><a href="#" onclick="return false;">Serviços</a></li>
                 <li><a href="#" onclick="return false;">Promoções</a></li>
-                <li><a href="#" onclick="return false;">Blog</a></li>
+                <li><a href="#" onclick="return false;">Blog</a></li> -->
             </ul>
         </div>
         <div class="col-md-6 col-md-pull-6">
