--- a/node-app/src/views/partials/header.ejs
+++ b/node-app/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
 
             <!-- logo -->
             <div class="nav-logo">
-                <a href="/" class="logo"><img src="./img/sulbaguia-logo-h.png" alt=""></a>
+                <a href="/" class="logo"><img src="./img/sulbaguia-logo-h-t.png" alt=""></a>
             </div>
             <!-- /logo -->
 
